[package]
name = "klang"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # automatically strip symbols from the binary
opt-level = "z"   # Optimize for size.
lto = true 
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort" #removes the need for this extra unwinding code on panic

[dependencies]
pest = "2.5.6"
pest_derive = "2.5.6"
text_io = "0.1.12"
